# renal-capacity-model

./: .gitignore  CITATION.cff  CODEOWNERS  README.md  pyproject.toml
.github/workflows/: codecov.yaml  linting.yaml
data/: Renal_Modelling_Input_File - Fictional Region.xlsx  Renal_Modelling_Output_File - Fictional Region.xlsx
reference/survival_time_to_event_curves/: ttd_cadTx.csv  ttd_cadTx_initialisation.csv  ttd_hhd.csv  ttd_hhd_initialisation.csv  ttd_ichd.csv  ttd_ichd_initialisation.csv  ttd_initialisation.csv  ttd_liveTx.csv  ttd_liveTx_initialisation.csv  ttd_pd.csv  ttd_pd_initialisation.csv  ttgf_cadTx.csv  ttgf_cadTx_initialisation.csv  ttgf_liveTx.csv  ttgf_liveTx_initialisation.csv  ttma_hhd.csv  ttma_hhd_initialisation.csv  ttma_ichd.csv  ttma_ichd_initialisation.csv  ttma_pd.csv  ttma_pd_initialisation.csv  tw_cadTx_England.csv  tw_liveTx_England.csv
renal_capacity_model/: config.py  config_values.py  distributions.py  entity.py  experiment.py  helpers.py  load_scenario.py  main.py  model.py  process_outputs.py  run_experiment.py  trial.py  utils.py
renal_capacity_model/tests/: test_arrivalprocesses.py
tests/: test_config.py
tests/end-to-end/: test_end_to_end.py
tests/unit/: test_config.py  test_end_to_end.py  test_entity.py  test_helpers.py  test_process_outputs.py
tests/validation/: national_validation.py  run_validation.py  test_arrivals.py  test_duration_times.py
