[project]
name = "renal-capacity-model"
version = "0.1.0"
description = "Discrete Event Simulation renal services model"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "pyarrow>=21.0.0",
    "sim-tools>=1.0.0",
    "simpy>=4.1.1",
    "tqdm>=4.67.1",
]

[tool.pytest.ini_options]
addopts = "--ignore=tests"
testpaths = ["tests/unit"]

[tool.coverage.run]
omit=["tests/*"]

[tool.coverage.report]
exclude_also = ['if __name__ == .__main__.:', 
                'if self.config.trace:']

[tool.pyright]
ignore = [      
    "build",
]

[dependency-groups]
dev = [
    "coverage>=7.10.7",
    "pyright>=1.1.405",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.2",
]
